# curator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  fly.toml  main.py  pyproject.toml
resources/: calendar.ics  schedule.json  syllabus.json
src/api/: app.py
src/program/: domain.py  ports.py  use_cases.py
src/program/adapters/: ics_calendar.py  json_spec.py  schedule_json.py
src/tools/: read_program.py
test/: fakes.py
test/acceptance/: test_program_tool.py
test/unit/: test_read_program.py  test_read_program_input.py  test_schedule_json_source.py
