[project]
name = "nalanda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi-users[sqlalchemy]>=15.0.5",
    "icalendar>=7.1.3",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
# E: Error, F: Pyflakes, I: Isort, N: Pep8-naming, UP: Pyupgrade
select = ["E", "F", "I", "N", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["icalendar", "icalendar.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.tools.read_program", "src.program.adapters.ics_calendar"]
disallow_untyped_calls = false
